<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:background="@color/purple_200"
        android:layout_width="265dp"
        android:layout_height="88dp"
        android:layout_marginBottom="636dp"
        android:text="@string/area_calculator"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/Sqaure"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="128dp"
        android:background="@color/purple_200"
        android:text="@string/sqaure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/Rectangle"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginBottom="236dp"
        android:text="@string/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/Triangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sqaure"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Triangle"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginBottom="12dp"
        android:text="@string/tringle"
        app:layout_constraintBottom_toTopOf="@+id/Circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Circle"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginBottom="196dp"
        android:text="@string/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>