<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"
        android:layout_height="109dp"
        android:text="@string/textview"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="314dp"
        android:layout_height="107dp"
        android:layout_marginBottom="48dp"
        android:text="@string/area_calculator"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="127dp"
        android:layout_marginBottom="20dp"
        android:text="@string/App"
        android:textColor="@color/cardview_dark_background"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="327dp"
        android:layout_height="133dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Shawaz"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>